fixed result text clearing automatically and updated getAnswer function to clear inputText after entry

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div>
           <label name="text-input"></label>
           <input id="text-input" type="text">
-          <button id="check-btn" type="submit">Check</button>
+          <button id="check-btn" type="submit" onclick="return false">Check</button>
         </div>
       </form>
       <p id="result"></p>
